# todo-cli

./: CMakeLists.txt  README.md  flake.nix
.cache/clangd/index/: main.cpp.05E1C8F53D52B959.idx
src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  todo
